Covid Challenge/Round-1/judge/submissions/96109714/result.txt
------------- user information -------------
identity: 96109714
username: shariat.kourosh
full name: كورش شريعت
email address: shariat.kourosh@gmail.com
------------- result -------------
problem name: راند اول (گراف کوچک)
state: داوری شد
short judge result: خطای کامپایل
penalty: 100%
judge score: 0
judge score with delay: 0
instructor score: not set yet.
------------- judge log -------------

Starting tester...
type = judge
Fri Apr 24 21:37:45 +0430 2020
Language: cpp
Time Limit: 10.0 s
Memory Limit: 262144 kB
Output size limit: 31457280 bytes
Compiling as cpp
Enabling Shield For C/C++
Compiled. Exit Code=1  Execution Time: 1421 ms
Compile Error
In file included from shield.cpp:22:0:
code.c: In function ‘void input()’:
code.c:41:5: error: ‘memset’ was not declared in this scope
     memset(c, -1, sizeof c);
     ^~~~~~
code.c:41:5: note: suggested alternative: ‘wmemset’
     memset(c, -1, sizeof c);
     ^~~~~~
     wmemset
code.c: In function ‘void set_order()’:

Total Execution Time: 2057 ms

